objects/INX_Tag_Link__c.object
<CustomObject>
    <fields>
        <fullName>INX_Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Package__c</fullName>
        <label>Package</label>
        <referenceTo>INX_Package__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>INX_Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>INX_Tag__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Tag Link</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>